Bugfixes (#57)
* Scroll til banner; flytt utils

* Fiks visning av scrollbar for graf

* Prettier

--- a/src/GrafOgTabell/Tabell/Tabell.less
+++ b/src/GrafOgTabell/Tabell/Tabell.less
@@ -15,5 +15,6 @@
 
     &__wrapper {
         padding: 2rem;
+        overflow: scroll;
     }
 }
